[package]
name = "plonky3-cook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p3-air = { path = "../../zkp/community/Plonky3/air" }
p3-matrix = { path = "../../zkp/community/Plonky3/matrix" }

[dev-dependencies]
p3-baby-bear = { path = "../../zkp/community/Plonky3/baby-bear" }
p3-field = {path = '../../zkp/community/Plonky3/field'}
p3-challenger = { path = "../../zkp/community/Plonky3/challenger" }
p3-circle = { path = "../../zkp/community/Plonky3/circle" }
p3-commit = { path = "../../zkp/community/Plonky3/commit" }
p3-dft = { path = "../../zkp/community/Plonky3/dft" }
p3-fri = { path = "../../zkp/community/Plonky3/fri" }
p3-goldilocks = { path = "../../zkp/community/Plonky3/goldilocks" }
p3-keccak = { path = "../../zkp/community/Plonky3/keccak" }
# p3-mds = { path = "../../zkp/community/Plonky3/mds" }
p3-merkle-tree = { path = "../../zkp/community/Plonky3/merkle-tree" }
# p3-mersenne-31 = { path = "../../zkp/community/Plonky3/mersenne-31" }
p3-poseidon = {path = "../../zkp/community/Plonky3/poseidon"}
p3-poseidon2 = { path = "../../zkp/community/Plonky3/poseidon2" }
p3-symmetric = { path = "../../zkp/community/Plonky3/symmetric" }
p3-uni-stark = { path = "../../zkp/community/Plonky3/uni-stark" }
rand = "0.8.5"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }